# ulb-technical-test

./: .gitignore
partie-1/: Dockerfile  Makefile  README.md  db.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  settings.py
partie-1/controllers/: cours.py  inscription.py  note.py
partie-1/models/: cours.py  inscription.py  note.py
partie-1/schemas/: cours.py  inscription.py  note.py
partie-1/services/: base.py  cours.py  inscription.py  note.py
partie-1/tests/: conftest.py  test_main.py
partie-1/tests/factories/: models.py  schemas.py
partie-1/tests/integration/controllers/: test_cours.py  test_note.py
partie-1/tests/unit/schemas/: test_cours.py  test_inscription.py
partie-2/: Dockerfile  Makefile  README.md  interface.py  main.py  pyproject.toml  settings.py
partie-2/generators/: base.py  bulletin.py  rapport_anomalies.py
partie-2/schemas/: cours.py  inscription.py  note.py
partie-3/: Dockerfile  Makefile  README.md  docker-compose.yml  nuxt.config.ts  package.json  pnpm-lock.yaml
partie-3/app/: app.vue
partie-3/app/components/: DataTable.vue
partie-3/app/components/ui/navigation-menu/: NavigationMenuViewport.vue
partie-3/app/composables/: useEntity.ts
partie-3/app/layouts/: default.vue
partie-3/app/pages/: cours.vue  index.vue  inscriptions.vue  notes.vue
partie-3/app/schemas/: cours.ts  inscription.ts  note.ts
