[project]
name = "partie-1"
version = "1"
description = "Cette API permet d'intéragir avec la base de données universite_demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruff>=0.13.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "faker>=37.6.0",
    "httpx>=0.28.1",
    "polyfactory>=2.22.2",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.12.12",
]
